# PhysicsBasedModeling-Demos

./: .gitignore
Collision-Tests/: CMakeLists.txt
Collision-Tests/tests/GroundCollision1/: CMakeLists.txt
Collision-Tests/tests/GroundCollision2/: CMakeLists.txt
Finite-Element-Tests/: CMakeLists.txt
Finite-Element-Tests/tests/Demo3D/: AnimatedTetrahedronMesh.h  CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch1/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch2/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch3/: CMakeLists.txt  main.cpp
Finite-Element-Tests/tests/MembranePinch4/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch5/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch6/: CMakeLists.txt
Finite-Element-Tests/tests/MembraneStretch1/: AnimatedMesh.h  CMakeLists.txt
Finite-Element-Tests/tests/MembraneStretch2/: AnimatedMesh.h  CMakeLists.txt  FiniteElementMesh.h
Finite-Element-Tests/tests/MembraneStretch3/: CMakeLists.txt
Finite-Element-Tests/tests/MembraneStretchPD/: CMakeLists.txt
Simple-Deformations/: CMakeLists.txt
Simple-Deformations/tests/latticeMesh/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshBoundary/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshBoundaryRelaxation/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshElasticityTest1/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshElasticityTest2/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshElasticityTest3/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/latticeMeshElasticityTest4/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/quadFacedCube/: CMakeLists.txt
USD-Tests/: CMakeLists.txt
USD-Tests/tests/USDtoOBJ/: CMakeLists.txt
USD-Tests/tests/animateAttribute/: CMakeLists.txt
USD-Tests/tests/helloWorld/: CMakeLists.txt
